here i have endded the search by name , and i made an edit at navigation botton bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="_57">57%</string>
     <string name="back">back</string>
     <string name="manage_your_meals_plan">Manage Your Meals Plan</string>
+    <string name="favorite">Favorite</string>
 </resources>
